--- a/cyclestreet_london_fatal.ipynb
+++ b/cyclestreet_london_fatal.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f9b50719",
+   "id": "e5e4e9b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1197e67c",
+   "id": "e6a1c81b",
    "metadata": {},
    "source": [
     "# Filter and Pull Fatal Casualties Data"
@@ -31,12 +31,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0f036aa",
+   "id": "2acb7c4b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read csv file\n",
-    "cycle_df = pd.read_csv(\"output_data/cyclingstreets_central_london.csv\")\n",
+    "cycle_df = pd.read_csv(\"output_data/csv_files/cyclingstreets_central_london.csv\")\n",
     "\n",
     "# Display data\n",
     "# cycle_df.head()"
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8044c7a3",
+   "id": "b8422282",
    "metadata": {
     "scrolled": true
    },
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa2f9694",
+   "id": "b201156d",
    "metadata": {
     "scrolled": false
    },
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fac618a",
+   "id": "22a3a250",
    "metadata": {
     "scrolled": true
    },
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "840ecf35",
+   "id": "4568a289",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1fe5202",
+   "id": "6e05ddfb",
    "metadata": {},
    "source": [
     "### Save Fatal Casualties Data"
@@ -116,17 +116,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3a798a",
+   "id": "ebfa5c04",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Printing out csv file\n",
-    "reduced_fatal_df.to_csv(\"output_data/initial_fatal_cyclingstreets_central_london.csv\")"
+    "reduced_fatal_df.to_csv(\"output_data/csv_files/initial_fatal_cyclingstreets_central_london.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8f9c7631",
+   "id": "0b055395",
    "metadata": {},
    "source": [
     "### Sort and Rename Columns"
@@ -135,14 +135,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "90f78ca0",
+   "id": "e1bfb8b0",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Read csv file\n",
-    "fatal_cycle_df = pd.read_csv(\"output_data/initial_fatal_cyclingstreets_central_london.csv\")\n",
+    "fatal_cycle_df = pd.read_csv(\"output_data/csv_files/initial_fatal_cyclingstreets_central_london.csv\")\n",
     "\n",
     "# Display data\n",
     "# cycle_df.head()\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "830c2be2",
+   "id": "4c8dda72",
    "metadata": {
     "scrolled": true
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0e9f1e9",
+   "id": "d48e5f9b",
    "metadata": {},
    "source": [
     "### Save Cleaned Fatal Casualties Data"
@@ -208,17 +208,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53afe82e",
+   "id": "89232b2f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Printing out csv file\n",
-    "renamed_fatal_cycle_df.to_csv(\"output_data/reduced_fatal_cyclingstreets_central_london.csv\")"
+    "renamed_fatal_cycle_df.to_csv(\"output_data/csv_files/reduced_fatal_cyclingstreets_central_london.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cd0faa89",
+   "id": "979e7c4a",
    "metadata": {},
    "source": [
     "# Create Graphs with Cleaned Dataframe"
@@ -227,17 +227,17 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "753905de",
+   "id": "76fd23e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read csv file\n",
-    "cleaned_fatal_cycle_df = pd.read_csv(\"output_data/reduced_fatal_cyclingstreets_central_london.csv\")"
+    "cleaned_fatal_cycle_df = pd.read_csv(\"output_data/csv_files/reduced_fatal_cyclingstreets_central_london.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7df1525d",
+   "id": "3719c5fe",
    "metadata": {},
    "source": [
     "### Pie Chart of  Sex of Casualties / Drivers"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e4de19db",
+   "id": "67b47615",
    "metadata": {
     "scrolled": false
    },
@@ -273,7 +273,7 @@
     "casualty_gender_graph.axis('equal')\n",
     "\n",
     "# Save the figure\n",
-    "plt.savefig(\"output_data/fig1.1_casualty_gender_graph.png\")\n",
+    "plt.savefig(\"output_data/images/fig1.1_casualty_gender_graph.png\")\n",
     "\n",
     "plt.show()"
    ]
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "18c57816",
+   "id": "325d55db",
    "metadata": {},
    "outputs": [
     {
@@ -306,14 +306,14 @@
     "driver_gender_graph.axis('equal')\n",
     "\n",
     "# Save the figure\n",
-    "plt.savefig(\"output_data/fig2.1_driver_gender_graph.png\")\n",
+    "plt.savefig(\"output_data/images/fig2.1_driver_gender_graph.png\")\n",
     "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d44233e",
+   "id": "51439fed",
    "metadata": {},
    "source": [
     "### Bar Chart of Fatalities by Age Range"
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ad4856d1",
+   "id": "0fc6d547",
    "metadata": {},
    "outputs": [
     {
@@ -357,14 +357,14 @@
     "    age_of_casualty_graph.annotate(str(p.get_height()), (p.get_x(), p.get_height() + 0.5))\n",
     "    \n",
     "# Save the figure\n",
-    "plt.savefig(\"output_data/fig1.2_age_of_casualty_graph.png\")\n",
+    "plt.savefig(\"output_data/images/fig1.2_age_of_casualty_graph.png\")\n",
     "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "25eea130",
+   "id": "80a7e4d5",
    "metadata": {},
    "source": [
     "### Bar Chart of Drivers Age Range"
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "76b14a4d",
+   "id": "7da0105a",
    "metadata": {},
    "outputs": [
     {
@@ -408,14 +408,14 @@
     "    age_of_driver_graph.annotate(str(p.get_height()), (p.get_x(), p.get_height() + 0.5))\n",
     "    \n",
     "# Save the figure\n",
-    "plt.savefig(\"output_data/fig2.2_age_of_driver_graph.png\")\n",
+    "plt.savefig(\"output_data/images/fig2.2_age_of_driver_graph.png\")\n",
     "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "253a87ab",
+   "id": "67967d9a",
    "metadata": {},
    "source": [
     "## Define Function for Plotting Bar Graphs"
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e6b18d9a",
+   "id": "b4cdafde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0caf140d",
+   "id": "1c544a91",
    "metadata": {},
    "source": [
     "### Bar Chart of Road Surface Conditions"
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "409d6e09",
+   "id": "99ac468f",
    "metadata": {},
    "outputs": [
     {
@@ -493,12 +493,12 @@
     "fig = plot_bar_graph(x_values, y_values, x_label, y_label,title, color)\n",
     "\n",
     "# Save the figure\n",
-    "fig.savefig(\"output_data/fig3.2.1_road_surface_condition_graph.png\", bbox_inches='tight')"
+    "fig.savefig(\"output_data/images/fig3.2.1_road_surface_condition_graph.png\", bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a16ac8e1",
+   "id": "1d3a46af",
    "metadata": {},
    "source": [
     "### Bar Chart of Road Type"
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6b5db361",
+   "id": "be473813",
    "metadata": {},
    "outputs": [
     {
@@ -539,12 +539,12 @@
     "fig = plot_bar_graph(x_values, y_values, x_label, y_label,title, color)\n",
     "\n",
     "# Save the figure\n",
-    "fig.savefig(\"output_data/fig3.2.2_road_type_graph.png\", bbox_inches='tight')"
+    "fig.savefig(\"output_data/images/fig3.2.2_road_type_graph.png\", bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c263f123",
+   "id": "c9f8d69c",
    "metadata": {},
    "source": [
     "### Bar Chart of Weather Conditions"
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "22a9d26f",
+   "id": "b1764b81",
    "metadata": {
     "scrolled": false
    },
@@ -587,12 +587,12 @@
     "fig = plot_bar_graph(x_values, y_values, x_label, y_label,title, color)\n",
     "\n",
     "# Save the figure\n",
-    "fig.savefig(\"output_data/fig3.3.1_weather_condition_graph.png\", bbox_inches='tight')"
+    "fig.savefig(\"output_data/images/fig3.3.1_weather_condition_graph.png\", bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a4f0840a",
+   "id": "03677982",
    "metadata": {},
    "source": [
     "### Bar Chart of Light Conditions"
@@ -601,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "7c0a8901",
+   "id": "6c45f0a5",
    "metadata": {
     "scrolled": false
    },
@@ -635,13 +635,13 @@
     "fig = plot_bar_graph(x_values, y_values, x_label, y_label,title, color)\n",
     "\n",
     "# Save the figure\n",
-    "fig.savefig(\"output_data/fig3.3.2_light_condition_graph.png\", bbox_inches='tight')"
+    "fig.savefig(\"output_data/images/fig3.3.2_light_condition_graph.png\", bbox_inches='tight')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62133c85",
+   "id": "83037f1a",
    "metadata": {},
    "outputs": [],
    "source": []
